--- a/GankIOSample/app/src/main/res/layout/content_web_view.xml
+++ b/GankIOSample/app/src/main/res/layout/content_web_view.xml
@@ -9,9 +9,9 @@
     tools:context="com.sqsong.gankiosample.ui.WebViewActivity"
     tools:showIn="@layout/activity_web_view">
 
-    <WebView
+    <!--<WebView
         android:id="@+id/webView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" />-->
 
 </android.support.v4.widget.SwipeRefreshLayout>
