--- a/GankIOSample/app/src/main/res/layout/fragment_base.xml
+++ b/GankIOSample/app/src/main/res/layout/fragment_base.xml
@@ -1,10 +1,8 @@
 <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/swipe_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorWhite"
-    tools:context="com.sqsong.gankiosample.ui.AndroidFragment">
+    android:background="@color/colorWhite">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
